# netcdf-cxx4

./: .gitignore  .travis.yml  CMakeInstallation.cmake  CMakeLists.txt  COPYRIGHT  COPYRIGHT_source.html  CTestConfig.cmake  CTestConfig.cmake.in  Doxyfile.developer  Makefile.am  Makefile.in  README.md  RELEASE_NOTES.html  RELEASE_NOTES.md  RELEASE__NOTES_8md_source.html  aclocal.m4  annotated.html  annotated.js  classes.html  classnetCDF_1_1NcAtt.html  classnetCDF_1_1NcAtt.js  classnetCDF_1_1NcAtt__inherit__graph.map  classnetCDF_1_1NcAtt__inherit__graph.md5  classnetCDF_1_1NcByte.html  classnetCDF_1_1NcByte.js  classnetCDF_1_1NcByte__coll__graph.map  classnetCDF_1_1NcByte__inherit__graph.md5  classnetCDF_1_1NcChar.html  classnetCDF_1_1NcChar.js  classnetCDF_1_1NcChar__coll__graph.md5  classnetCDF_1_1NcChar__inherit__graph.map  classnetCDF_1_1NcCompoundType.html  classnetCDF_1_1NcCompoundType.js  classnetCDF_1_1NcCompoundType__coll__graph.map  classnetCDF_1_1NcCompoundType__coll__graph.md5  classnetCDF_1_1NcDim.html  classnetCDF_1_1NcDim.js  classnetCDF_1_1NcDouble.html  classnetCDF_1_1NcDouble.js  classnetCDF_1_1NcDouble__coll__graph.md5  (+429 more)
.github/workflows/: test.yml
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
cxx4/: CMakeLists.txt  Makefile.am  Makefile.in  cxxFeatures.h  example1.cpp  ncAtt.cpp  ncAtt.h  ncByte.cpp  ncByte.h  ncChar.cpp  ncChar.h  ncCheck.cpp  ncCheck.h  ncCompoundType.cpp  ncCompoundType.h  ncDim.cpp  ncDim.h  ncDouble.cpp  ncDouble.h  ncEnumType.cpp  ncEnumType.h  ncException.cpp  ncException.h  ncFile.cpp  ncFile.h  ncFill.cpp  ncFill.h  ncFilter.cpp  ncFilter.h  ncFloat.cpp  ncFloat.h  ncGroup.cpp  ncGroup.h  ncGroupAtt.cpp  ncGroupAtt.h  ncInt.cpp  ncInt.h  ncInt64.cpp  ncInt64.h  ncOpaqueType.cpp  (+40 more)
docs/: CMakeLists.txt  Doxyfile.developer  Doxyfile.in  Makefile.am  Makefile.in  footer.html  mainpage.md
examples/: CMakeLists.txt  Makefile.am  Makefile.in  aodhan_trial.cpp  pres_temp_4D_plugin_rd.cpp  pres_temp_4D_plugin_wr.cpp  pres_temp_4D_rd.cpp  pres_temp_4D_wr.cpp  sfc_pres_temp_rd.cpp  sfc_pres_temp_wr.cpp  simple_xy_rd.cpp  simple_xy_wr.cpp  simple_xy_wr_formats.cpp  tst_filter.sh
plugins/: CMakeLists.txt  H5Zbzip2.c  H5Zmisc.c  Makefile.am  Makefile.in  libbzip2.la
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  classes_0.js  enums_0.js  enums_1.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  pages_0.js  pages_1.js  related_0.js  searchdata.js  variables_0.js  variables_2.js
